--- a/src/content-script/styles.scss
+++ b/src/content-script/styles.scss
@@ -1,12 +1,13 @@
 [data-theme='auto'] {
   @import 'github-markdown-css/github-markdown';
-  @import 'highlight.js/scss/github.scss';
   @media screen and (prefers-color-scheme: dark) {
+    @import 'highlight.js/scss/github-dark.scss';
     --font-color: #c9d1d9;
     --theme-color: #202124;
     --theme-border-color: #3c4043;
   }
   @media screen and (prefers-color-scheme: light) {
+    @import 'highlight.js/scss/github.scss';
     --font-color: #24292f;
     --theme-color: #ffffff;
     --theme-border-color: #aeafb2;
